[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic_mac_client"
version = "0.1.0"
description = "A native desktop application for Meshtastic nodes via BLE on macOS."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "PyQt6",
    "qasync",
    "meshtastic",
    "bleak",
]

[project.scripts]
meshtastic-mac-client = "meshtastic_mac_client.main:main"

[tool.setuptools]
# This tells setuptools to include your subfolders (ui, core, assets)
packages = ["meshtastic_mac_client", "meshtastic_mac_client.core", "meshtastic_mac_client.ui"]
include-package-data = true