[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic_mac_client"
version = "0.1.0"
description = "A native desktop application for Meshtastic nodes via BLE on macOS."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.1",
    "PyQt6-WebEngine>=6.6.0",
    "qasync>=0.27.1",
    "meshtastic>=2.7.7",
    "bleak>=0.21.1",
    "pyqtgraph>=0.13.3",
    "folium>=0.15.1",
    "Pillow>=10.1.0",
    "pypubsub>=4.0.3",
]

[project.scripts]
meshtastic-mac-client = "meshtastic_mac_client.main:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true